click outside close drawer, and fix line axis not showing

--- a/src/app/composer/composer.component.css
+++ b/src/app/composer/composer.component.css
@@ -27,6 +27,8 @@ gate-canvas{
     border: 1px solid #aaa;
     background: #fff;
     min-height: 300px;
+    width: 500px;
+    margin: 0 auto;
 }
 
 .settings-header{
