--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,7 @@ input[type="text"]{
   padding: 5px;
   min-height: 400px;
 }
+
+.backdrop{
+  opacity: 0.1;
+}
